--- a/src/Intranet.Web/Intranet.Web/package.json
+++ b/src/Intranet.Web/Intranet.Web/package.json
@@ -13,11 +13,13 @@
     "@angular/core": "^2.4.5",
     "@angular/forms": "^2.4.5",
     "@angular/http": "^2.4.5",
+    "@angular/material": "^2.0.0-beta.3",
     "@angular/platform-browser": "^2.4.5",
     "@angular/platform-browser-dynamic": "^2.4.5",
     "@angular/platform-server": "^2.4.5",
     "@angular/router": "^3.4.5",
     "@types/node": "^6.0.42",
+    "angular-material": "^1.1.4",
     "angular2-platform-node": "~2.0.11",
     "angular2-template-loader": "^0.6.2",
     "angular2-universal": "^2.1.0-rc.1",
