--- a/src/Intranet.Web/Intranet.Web/package.json
+++ b/src/Intranet.Web/Intranet.Web/package.json
@@ -8,7 +8,7 @@
     "lint": "tslint \"./ClientApp/**/*.ts?(x)\" --exclude \"./**/node_modules/**/*.ts?(x)\"",
     "lint:fix": "tslint --fix \"./ClientApp/**/*.ts?(x)\" --exclude \"./**/node_modules/**/*.ts?(x)\"",
     "pretest": "npm run lint",
-    "test": "karma start ClientApp/test/karma.conf.js"
+    "test": "jest"
   },
   "dependencies": {
     "@angular/animations": "^4.0.0",
@@ -57,14 +57,21 @@
   "devDependencies": {
     "@types/chai": "^3.4.34",
     "@types/jasmine": "^2.5.37",
+    "@types/jest": "^19.2.4",
     "chai": "^3.5.0",
     "jasmine-core": "^2.5.2",
-    "karma": "^1.3.0",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-webpack": "^1.8.0",
+    "jest": "^20.0.4",
+    "jest-preset-angular": "^2.0.3",
     "tslint": "^5.1.0"
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+    "setupTestFrameworkScriptFile": "<rootDir>/Tests/setupJest.ts",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "testRegex": "(/Tests/.+\\.(test|spec))\\.(ts|js|tsx)$"
   }
 }
