--- a/src/Intranet.Web/Intranet.Web/Intranet.Web.csproj
+++ b/src/Intranet.Web/Intranet.Web/Intranet.Web.csproj
@@ -48,4 +48,5 @@
       </ResolvedFileToPublish>
     </ItemGroup>
   </Target>
+  <ProjectExtensions><VisualStudio><UserProperties src_4tsconfig_1spec_1json__JSONSchema="http://json.schemastore.org/config" /></VisualStudio></ProjectExtensions>
 </Project>
