--- a/src/Intranet.Web/Intranet.Web/package.json
+++ b/src/Intranet.Web/Intranet.Web/package.json
@@ -62,7 +62,10 @@
     "jasmine-core": "^2.5.2",
     "jest": "^20.0.4",
     "jest-preset-angular": "^2.0.3",
-    "tslint": "^5.1.0"
+    "jest-zone-patch": "0.0.7",
+    "tslint": "^5.1.0",
+    "typescript": "^2.3.4",
+    "zone.js": "^0.8.12"
   },
   "jest": {
     "preset": "jest-preset-angular",
@@ -72,6 +75,6 @@
       "tsx",
       "js"
     ],
-    "testRegex": "(/Tests/.+\\.(test|spec))\\.(ts|js|tsx)$"
+    "testRegex": "(.+\\.(test|spec))\\.(ts|js|tsx)$"
   }
 }
