--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: csharp
+﻿language: csharp
 dist: trusty
 dotnet: 1.0.4
 
@@ -8,6 +8,8 @@ before_script:
 script:
 - cd src
 - ./build.sh
+- npm install jest jest-preset-angular jest-zone-patch
+- jest --verbose
 
 cache:
   directories:
